refactor : Bakery pioneer 제거 & BakeryAddReport 추가