@@ -4,7 +4,6 @@ import static java.lang.Math.*;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import javax.persistence.CascadeType;
 import javax.persistence.Column;
@@ -77,10 +76,6 @@ public class Bakery extends BaseEntity {
 	@Convert(converter = FacilityInfoListConverter.class)
 	private List<FacilityInfo> facilityInfoList = new ArrayList<>();
 
-	@ManyToOne(fetch = FetchType.EAGER)
-	@JoinColumn(name = "pioneer_id")
-	private User pioneer;
-
 	@ManyToOne(fetch = FetchType.LAZY)
 	@JoinColumn(name = "owner_id")
 	private User owner;
@@ -94,7 +89,7 @@ public class Bakery extends BaseEntity {
 		String name, Double latitude, Double longitude,
 		String address, String detailedAddress, String hours, String phoneNumber,
 		String websiteURL, String instagramURL, String facebookURL, String blogURL, String image,
-		List<FacilityInfo> facilityInfoList, BakeryStatus status, User pioneer
+		List<FacilityInfo> facilityInfoList, BakeryStatus status, BakeryAddReport bakeryAddReport
 	) {
 		this.name = name;
 		this.latitude = latitude;
@@ -108,7 +103,7 @@ public class Bakery extends BaseEntity {
 		this.image = image;
 		this.facilityInfoList = facilityInfoList;
 		this.status = status;
-		this.pioneer = pioneer;
+		this.bakeryAddReport = bakeryAddReport;
 	}
 
 	public void update(
@@ -129,10 +124,6 @@ public class Bakery extends BaseEntity {
 		this.status = status;
 	}
 
-	public void updatePioneer(User pioneer) {
-		this.pioneer = pioneer;
-	}
-
 	public boolean isPosting() {
 		return this.status.equals(BakeryStatus.POSTING);
 	}
@@ -150,8 +141,12 @@ public class Bakery extends BaseEntity {
 	}
 
 	public Double bakeryRating(List<Review> reviewList) {
-		return Math.floor(reviewList.stream().map(Review::getAverageRating).collect(Collectors.toList())
+		return Math.floor(reviewList.stream().map(Review::getAverageRating).toList()
 			.stream().mapToDouble(Double::doubleValue).average().orElse(0) * 10) / 10.0;
 	}
 
+	public String getShortAddress() {
+		final String[] addressSplit = this.address.split("\\s");
+		return addressSplit.length == 1 ? addressSplit[0] : addressSplit[0] + " " + addressSplit[1];
+	}
 }
